--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: RegioVision e.V. # your site title
 author: RegioVision e.V. # You :P
 description: > # Meta description of Homepage
-  RegioVision e.V. - Verein für ökologisch und sozial nachhaltige Regionalentwicklung
+  RegioVision e.V. - Verein für ökologisch und sozial nachhaltige Regionalentwicklung in Templin, Uckermark, Brandenburg.
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://verein-regiovision.de" # the base hostname & protocol for your site, e.g. http://example.com
 
